src/test/ui/coherence-overlap-upstream.stderr
error[E0119]: conflicting implementations of trait `Foo` for type `i16`:
  --> $DIR/coherence-overlap-upstream.rs:22:1
   |
21 | impl<T> Foo for T where T: Remote {}
   | --------------------------------- first implementation here
22 | impl Foo for i16 {}
   | ^^^^^^^^^^^^^^^^ conflicting implementation for `i16`
   |
   = note: upstream crates may add new impl of trait `coherence_lib::Remote` for type `i16` in future versions

error: aborting due to previous error

